- STARKA-125 add starling workflow and demo
- STARKA-124 fix strelka overlapping indel issue
- STARKA-118 fix GSNAP alignment example: leading deletion in exon
- STARKA-111 transfer full strelka workflow v1 logic into starka

????v2.1????

- STARKA-53 remove grouper legacy contig logic
- STARKA-29 short-range SNP phasing and arbitrary phasing window
- STARKA-57 HighRefRep should not be default rule-based filter for indels
v2.0.21
- Minor VQSR fixes
- STARKA-52 gVCF block compression filters not cleared on single record 
v2.0.20
- Added VQSR for indels
- Updated VQSR model parameters
- Updated homopolymer error-model
- Modified block-compression parameters for better NextSeq compression 
- Added option for providing bed-file with sites that should not be block-compressed 
- STARKA-50 option to output somatic-callable bed file
v2.0.17
- STARKA-48 Fixed formatting bug for high GQX 
- Header fix for adjusted Nova filters
v2.0.16
- Adjusted filters for Nova release
v2.0.15
- STARKA-47 Accept GATK-style bam indices
- STARKA-43 Accept edge indel pattern produced by freeBayes/BamLeftAlign
- STARKA-45 Filter indels greater than max indel size from candidate indel vcf 
v2.0.14
- STARKA-41 Fix consensus open-break-end error
v2.0.13
- Skip BWA-mem supplementary reads
- STARKA-37 Handle Skip-Delete-Skip pattern in tophat output
- STARKA-23 Accept an input VCF file for which each alternate allele must be genotyped
- STARKA-35 Fixed 255 q-score bug for RNAseq workflow
v2.0.12
- STARKA-34 Properly handle insertions adjacent to introns
- Filter out all open-breakends from vcf output
v2.0.11
- STARKA-14 Add option to provide sample name in output VCF SAMPLE column
- VQSR features
v2.0.10
- STARKA-30 fix stability issue encounted with large indels in 2x400 reads
v2.0.9
- STARKA-32 fix handling of another complex indel on read edge
v2.0.8
- STARKA-27 correctly handle complex insert/delete indels for read edges
v2.0.7
- STARKA-12 tolerate all edge insertions/deletions