@@ -90,57 +90,3 @@ qphred_to_mapped_qphred(const int basecall_val,
     return qphred_cache::get_mapped_qscore(basecall_val,mapping_val);
 }
 
-
-// logodds aka solexa:
-inline
-int
-error_prob_to_qlogodds(const double prob)
-{
-    static const double maxlog10(static_cast<double>(std::numeric_limits<double>::max_exponent10));
-    return static_cast<int>(std::floor(10.*std::min(maxlog10,std::log10((1.-prob)/prob))+0.5));
-}
-
-inline
-double
-logodds_to_error_prob(const double val)
-{
-    return 1./(1.+std::pow(10.,val/10.));
-}
-
-inline
-double
-qlogodds_to_error_prob(const int qscore)
-{
-    return qlogodds_cache::get_error_prob(qscore);
-}
-
-inline
-int
-error_prob_to_qscore(const double prob,
-                     const bool is_qphred)
-{
-    if (is_qphred)
-    {
-        return error_prob_to_qphred(prob);
-    }
-    else
-    {
-        return error_prob_to_qlogodds(prob);
-    }
-}
-
-inline
-double
-qscore_to_error_prob(const int qscore,
-                     const bool is_qphred)
-{
-    if (is_qphred)
-    {
-        return qphred_to_error_prob(qscore);
-    }
-    else
-    {
-        return qlogodds_to_error_prob(qscore);
-    }
-}
-
