@@ -1,3 +1,4 @@
+- STARKA-128 fix build with gcc-4.9.0, finally get rid of solexa q-scores
 - STARKA-125 add starling workflow and demo
 - STARKA-124 fix strelka overlapping indel issue
 - STARKA-118 fix GSNAP alignment example: leading deletion in exon
